--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "classnames": "^2.2.6",
     "humps": "^2.0.1",
     "lodash": "^4.17.5",
     "normalizr": "^3.2.4",
@@ -50,6 +51,7 @@
     "redux-devtools-log-monitor": "^1.4.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "redux-undo": "^0.6.1"
+    "redux-undo": "^0.6.1",
+    "reselect": "^3.0.1"
   }
 }
